rgbds-0.6.1/test/asm/compound-assignment.err
error: compound-assignment.asm(36):
    Expected constant expression: 'UnDeFiNeD' is not constant at assembly time
error: Assembly aborted (1 error)!
